src/deploy/istio/egress-auth0.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: auth0
spec:
  hosts:
  - docati.eu.auth0.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth0
spec:
  hosts:
  - docati.eu.auth0.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - docati.eu.auth0.com
    route:
    - destination:
        host: docati.eu.auth0.com
        port:
          number: 443
      weight: 100
